--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+<script src="/socket.io/socket.io.js"></script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<div class="container">
+    <br>
+    <div class="jumbotron"> 
+        <h1 class="display-4">Send Message</h1>
+        <br>
+        <input id="name" class="form-control" placeholder="Name">
+        <br>
+        <textarea id="message" class="form-control" placeholder="Message"></textarea>
+        <br>
+        <button id="send" class="btn btn-primary">Send</button>
 
-<body>
-    <div id="app">{{message}}
-        <h3>NBA</h3>
-        <div v-if="seen">Hello NBA</div>
-        <ol>
-            <li v-for="game in games">
-                {{game.title}} {{game.price}}
-            </li>
-        </ol>
-        <p>Your fav game is: {{mygame}}</p>
-        <!-- <input v-model="mygame"> -->
-        <button v-on:click="btnClick('My World')">My World</button>
-        <button v-on:click="btnClick('NBA 2k19')">NBA 2K19</button>
-        <button v-on:click="btnClick('PES 2019')">PES 2019</button>
+
     </div>
-<a href="udemy.html"><h3>Go back</h3></a>
-    <script>
-        var app = new Vue({
-            el: '#app',
-
-            data: {
-                seen: true,
-                message: 'Hello Vue.js',
-                games: [{ title: 'NBA 2k19', price: 599 },
-                { title: 'FIFA', price: 499 }],
-                mygame: 'NBA 2k19',
-            },
-            methods: {
-                btnClick: function (pgame) {
-                    this.mygame = pgame
-                }
-            }
-
-
+    <div id="messages"></div>
+</div>
+<script>
+    var socket = io()
+    $(() => {
+        $("#send").click(() => {
+            var message = { name: $("#name").val(), message: $("#message").val() }
+            postMessages(message)
         })
-    </script>
-    <footer>Website made by Su</footer>
-</body>
+        getMessages()
+    })
 
-</html>
+    socket.on('message', addMessage)
+
+    function addMessage(message) {
+        $("#messages").append(`<h4> ${message.name} </h4> <p> ${message.message} </p>`)
+    }
+
+    function getMessages() {
+        $.get('http://localhost:3000/messages', (data) => {
+            data.forEach(addMessage)
+        })
+    }
+
+    function postMessages(message) {
+        $.post('http://localhost:3000/messages', message)
+    }
+
+
+
+</script>
